[package]
name = "return_from_rust"
version = "0.1.0"
authors = ["Duncan Sparks <duncan.sprks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = { git = "https://github.com/GodotNativeTools/godot-rust.git" }

[lib]
crate_type = ["cdylib"]
